--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
 					<div class="header-wrap">
 						<div class="header-top d-flex justify-content-between align-items-center">
 							<div class="logo">
-								<a href="index.html"><img src="img/logo.png" alt=""></a>
+								<a href="index.html" class="brandName">Farmers Connect</a>
 							</div>
 							<div class="main-menubar d-flex align-items-center">
 								<nav class="hide">
 									<a href="index.html">Home</a>
-									<a href="generic.html">Generic</a>
-									<a href="elements.html">Elements</a>
+									<a href="">About Us</a>
+									<a href="">Contact Us</a>
+									<a href="">Product List</a>
 								</nav>
 								<div class="menu-bar"><span class="lnr lnr-menu"></span></div>
 							</div>
@@ -55,7 +56,7 @@
 				<div class="item d-flex align-items-center">
 					<div class="container">
 						<div class="content">
-							<h1 class="text-white text-uppercase">Instead of eating, <br> you should feel the garnishing</h1>
+							<h1 class="text-white text-uppercase">Connecting Farmers, <br>Home and Abroad...</h1>
 							<p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor  <br>incididunt ut labore et dolore magna aliqua.</p>
 							<a href="#" class="primary-btn d-inline-flex align-items-center"><span class="mr-10">Get Started</span><span class="lnr lnr-arrow-right"></span></a>
 						</div>
@@ -64,7 +65,7 @@
 				<div class="item d-flex align-items-center">
 					<div class="container">
 						<div class="content">
-							<h1 class="text-white text-uppercase">Instead of eating, <br> you should feel the garnishing</h1>
+							<h1 class="text-white text-uppercase">Connecting Farmers, <br>Home and Abroad...</h1>
 							<p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor  <br>incididunt ut labore et dolore magna aliqua.</p>
 							<a href="#" class="primary-btn d-inline-flex align-items-center"><span class="mr-10">Get Started</span><span class="lnr lnr-arrow-right"></span></a>
 						</div>
@@ -73,7 +74,7 @@
 				<div class="item d-flex align-items-center">
 					<div class="container">
 						<div class="content">
-							<h1 class="text-white text-uppercase">Instead of eating, <br> you should feel the garnishing</h1>
+							<h1 class="text-white text-uppercase">Connecting Farmers, <br>Home and Abroad...</h1>
 							<p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor  <br>incididunt ut labore et dolore magna aliqua.</p>
 							<a href="#" class="primary-btn d-inline-flex align-items-center"><span class="mr-10">Get Started</span><span class="lnr lnr-arrow-right"></span></a>
 						</div>
@@ -89,10 +90,43 @@
 						<div class="col-md-4">
 							<div class="single-feature">
 								<div class="icon">
-									<span class="lnr lnr-sun"></span>
+									<span class="lnr lnr-magnifier"></span>
 								</div>
 								<div class="desc text-center">
-									<h6 class="title text-uppercase">Stunning Visuals</h6>
+									<h6 class="title text-uppercase">Finding Farmers</h6>
+									<p>This is a placeholder text to be replaced with real content when we have one. Insert some cool text here about finding farmers later.</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="single-feature">
+								<div class="icon">
+									<span class="lnr lnr-users"></span>
+								</div>
+								<div class="desc text-center">
+									<h6 class="title text-uppercase">Connecting Farmers</h6>
+									<p>This is a placeholder text to be replaced with real content when we have one. Insert some cool text here about finding farmers later.</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="single-feature">
+								<div class="icon">
+									<span class="lnr lnr-map-marker"></span>
+								</div>
+								<div class="desc text-center">
+									<h6 class="title text-uppercase">Farm Inspection</h6>
+									<p>This is a placeholder text to be replaced with real content when we have one. Insert some cool text here about finding farmers later.</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="single-feature">
+								<div class="icon">
+									<span class="lnr lnr-magnifier"></span>
+								</div>
+								<div class="desc text-center">
+									<h6 class="title text-uppercase">Finding Farmers</h6>
 									<p>Here, I focus on a range of items and features that we use in life without giving them a second thought such as Coca Cola, body</p>
 								</div>
 							</div>
@@ -100,55 +134,22 @@
 						<div class="col-md-4">
 							<div class="single-feature">
 								<div class="icon">
-									<span class="lnr lnr-code"></span>
+									<span class="lnr lnr-users"></span>
 								</div>
 								<div class="desc text-center">
-									<h6 class="title text-uppercase">Clean Code</h6>
-									<p>Over 92% of computers are infected with Adware and spyware. Such software is rarely accompanied by uninstall utility </p>
+									<h6 class="title text-uppercase">Connecting Farmers</h6>
+									<p>This is a placeholder text to be replaced with real content when we have one. Insert some cool text here about finding farmers later.</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4">
 							<div class="single-feature">
 								<div class="icon">
-									<span class="lnr lnr-clock"></span>
+									<span class="lnr lnr-map-marker"></span>
 								</div>
 								<div class="desc text-center">
-									<h6 class="title text-uppercase">Punctuality</h6>
-									<p>If you own an Iphone, you’ve probably already worked out how much fun it is to use it to watch movies-it has that nice big screen</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="single-feature">
-								<div class="icon">
-									<span class="lnr lnr-sun"></span>
-								</div>
-								<div class="desc text-center">
-									<h6 class="title text-uppercase">Stunning Visuals</h6>
-									<p>Here, I focus on a range of items and features that we use in life without giving them a second thought such as Coca Cola, body</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="single-feature">
-								<div class="icon">
-									<span class="lnr lnr-code"></span>
-								</div>
-								<div class="desc text-center">
-									<h6 class="title text-uppercase">Clean Code</h6>
-									<p>Over 92% of computers are infected with Adware and spyware. Such software is rarely accompanied by uninstall utility </p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="single-feature">
-								<div class="icon">
-									<span class="lnr lnr-clock"></span>
-								</div>
-								<div class="desc text-center">
-									<h6 class="title text-uppercase">Punctuality</h6>
-									<p>If you own an Iphone, you’ve probably already worked out how much fun it is to use it to watch movies-it has that nice big screen</p>
+									<h6 class="title text-uppercase">Farm Inspection</h6>
+									<p>This is a placeholder text to be replaced with real content when we have one. Insert some cool text here about finding farmers later.</p>
 								</div>
 							</div>
 						</div>
@@ -162,14 +163,14 @@
 					<div class="row align-items-center">
 						<div class="col-lg-3">
 							<div class="story-title">
-								<h3 class="text-white">Our Untold Story</h3>
-								<span class="text-uppercase text-white">Re-imagining the way</span>
+								<h3 class="text-white">Our Goals Are Simple</h3>
+								<span class="text-uppercase text-white">Connect Farmers</span>
 							</div>
 						</div>
 						<div class="col-lg-6">
 							<div class="story-box">
-								<h6 class="text-uppercase">From the part of beginning</h6>
-								<p>Usage of the Internet is becoming more common due to rapid advancement of technology and the power of globalization. Societies are becoming more inter-connected. Thoughts from different</p>
+								<h6 class="text-uppercase">Some cool mission statment</h6>
+								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. </p>
 								<a href="#" class="primary-btn d-inline-flex align-items-center"><span class="mr-10">Get Started</span><span class="lnr lnr-arrow-right"></span></a>
 							</div>
 						</div>
@@ -185,89 +186,52 @@
 					<div class="row justify-content-center">
 						<div class="col-lg-8">
 							<div class="section-title text-center">
-								<h3>Our Amazing Works</h3>
-								<span class="text-uppercase">Re-imagining the way</span>
+								<h3>Gallery</h3>
+								<span class="text-uppercase">Images of connected farmers or something along the lines..</span>
 							</div>
 						</div>
 					</div>
 					<div class="active-works-carousel mt-40">
 						<div class="item">
-							<div class="thumb" style="background: url(img/c1.jpg);"></div>
+							<div class="thumb" style="background: url(img/fc21.jpeg);"></div>
 							<div class="caption text-center">
-								<h6 class="text-uppercase">Vector Illustration</h6>
-								<p>LCD screens are uniquely modern in style, and the liquid crystals <br> that make them work have allowed humanity to</p>
+								<h6 class="text-uppercase">Obasanjo Farms - 2020</h6>
+								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. <br> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
 							</div>
 						</div>
 						<div class="item">
-							<div class="thumb" style="background: url(img/c1.jpg);"></div>
+							<div class="thumb" style="background: url(img/fc20.jpeg);"></div>
 							<div class="caption text-center">
-								<h6 class="text-uppercase">Vector Illustration</h6>
-								<p>LCD screens are uniquely modern in style, and the liquid crystals <br> that make them work have allowed humanity to</p>
+								<h6 class="text-uppercase">Aderinto Farms</h6>
+								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. <br> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
 							</div>
 						</div>
 						<div class="item">
-							<div class="thumb" style="background: url(img/c1.jpg);"></div>
+							<div class="thumb" style="background: url(img/fc19.jpeg);"></div>
 							<div class="caption text-center">
-								<h6 class="text-uppercase">Vector Illustration</h6>
-								<p>LCD screens are uniquely modern in style, and the liquid crystals <br> that make them work have allowed humanity to</p>
+								<h6 class="text-uppercase">Aderinto Farms</h6>
+								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. <br> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
 							</div>
 						</div>
 						<div class="item">
-							<div class="thumb" style="background: url(img/c1.jpg);"></div>
+							<div class="thumb" style="background: url(img/fc18.jpeg);"></div>
 							<div class="caption text-center">
-								<h6 class="text-uppercase">Vector Illustration</h6>
-								<p>LCD screens are uniquely modern in style, and the liquid crystals <br> that make them work have allowed humanity to</p>
+								<h6 class="text-uppercase">Aderinto Farms</h6>
+								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. <br> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
 							</div>
 						</div>
 						<div class="item">
-							<div class="thumb" style="background: url(img/c1.jpg);"></div>
+							<div class="thumb" style="background: url(img/fc17.jpeg);"></div>
 							<div class="caption text-center">
-								<h6 class="text-uppercase">Vector Illustration</h6>
-								<p>LCD screens are uniquely modern in style, and the liquid crystals <br> that make them work have allowed humanity to</p>
+								<h6 class="text-uppercase">Aderinto Farms</h6>
+								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. <br> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
 			<!-- End Amazing Works Area -->
-			<!-- Start Story Area -->
-			<section class="story-area-2">
-				<div class="container">
-					<div class="row align-items-center">
-						<div class="col-lg-3">
-							<div class="story-title sm-show text-center">
-								<h3 class="text-white">Our Untold Story</h3>
-								<span class="text-uppercase text-white">Re-imagining the way</span>
-							</div>
-						</div>
-						<div class="col-lg-6">
-							<div class="story-box">
-								<h6 class="text-uppercase">From the part of beginning</h6>
-								<p>Usage of the Internet is becoming more common due to rapid advancement of technology and the power of globalization. Societies are becoming more inter-connected. Thoughts from different</p>
-								<a href="#" class="primary-btn d-inline-flex align-items-center"><span class="mr-10">Get Started</span><span class="lnr lnr-arrow-right"></span></a>
-							</div>
-						</div>
-						<div class="col-lg-3">
-							<div class="story-title sm-hide text-right">
-								<h3 class="text-white">Our Untold Story</h3>
-								<span class="text-uppercase text-white">Re-imagining the way</span>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- End Story Area -->
-			<div class="brand-area">
-				<div class="container">
-					<div class="total-brand d-flex justify-content-around">
-						<img src="img/b1.png" alt="">
-						<img src="img/b2.png" alt="">
-						<img src="img/b3.png" alt="">
-						<img src="img/b4.png" alt="">
-						<img src="img/b5.png" alt="">
-					</div>
-				</div>
-			</div>
+			
 			<!-- Start Subscription Area -->
 			<section class="subscription-area">
 				<div class="container">
@@ -282,7 +246,7 @@
 					<div class="row justify-content-center">
 						<div class="col-lg-6">
 							<div id="mc_embed_signup">
-								<form target="_blank" novalidate action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&id=92a4423d01" method="get" class="subscription relative">
+								<form target="_blank" novalidate class="subscription relative">
 									<input type="email" name="EMAIL" placeholder="Email address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email address'" required>
 									<div style="position: absolute; left: -5000px;">
 										<input type="text" name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="">
@@ -307,7 +271,7 @@
 								</div>
 								<div class="desc">
 									<h6 class="title text-uppercase">Address</h6>
-									<p>56/8, panthapath, west <br> dhanmondi, kalabagan, <br>Dhaka - 1205</p>
+									<p>2/4 somewhere at,  <br> Ikorodu road, <br>Lagos, Nigeria</p>
 								</div>
 							</div>
 						</div>
@@ -319,8 +283,8 @@
 								<div class="desc">
 									<h6 class="title text-uppercase">Email Address</h6>
 									<div class="contact">
-										<a href="mailto:info@dataarc.com">info@dataarc.com</a> <br>
-										<a href="mailto:support@dataarc.com">support@dataarc.com</a>
+										<a href="mailto:info@farmersconnect.com">info@farmersconnect.com</a> <br>
+										<a href="mailto:support@farmersconnect.com">support@farmersconnect.com</a>
 									</div>
 								</div>
 							</div>
@@ -333,8 +297,8 @@
 								<div class="desc">
 									<h6 class="title text-uppercase">Phone Number</h6>
 									<div class="contact">
-										<a href="tel:1545">012 4562 982 3612</a> <br>
-										<a href="tel:54512">012 6321 956 4587</a>
+										<a href="tel:08037219945">080 3721 9945</a> <br>
+										<a href="tel:08037219945">080 3721 9945</a>
 									</div>
 								</div>
 							</div>
@@ -345,14 +309,12 @@
 					<div class="container">
 						<div class="footer-content d-flex justify-content-between align-items-center flex-wrap">
 							<div class="logo">
-								<a href="index.html"><img src="img/f-logo.png" alt=""></a>
+								<a href="index.html" class="brandName white">Farmers Connect</a>
 							</div>
-							<div class="copy-right-text">Copyright &copy; 2017  |  All rights reserved. This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></div>
+							<div class="copy-right-text">Copyright &copy; 2017  |  All rights reserved.</div>
 							<div class="footer-social">
 								<a href="#"><i class="fa fa-facebook"></i></a>
 								<a href="#"><i class="fa fa-twitter"></i></a>
-								<a href="#"><i class="fa fa-dribbble"></i></a>
-								<a href="#"><i class="fa fa-behance"></i></a>
 							</div>
 						</div>
 					</div>
@@ -361,9 +323,6 @@
 			<!-- End Footer Widget Area -->
 
 		</div>
-
-
-
 
 		<script src="js/vendor/jquery-2.2.4.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
